# vowl

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pypirc.example  .releaserc.yml  .uv.toml.example  CHANGELOG.md  CLASSIFICATION.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES  coverage-rescan.json  coverage.json  mkdocs.yml  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml
docs/: Doxyfile  architecture.md  contracts.md  getting-started.md  index.md  known-issues.md  oracle-sql-compatibility-fix.md  plan-engine-agnostic-check-references.md  plan-library-metrics.md  rename-qbc-to-vowl.md  roadmap.md  robots.txt  usage-patterns.md
docs/demo/: vowl_demo_HDB_results_check_results.csv  vowl_demo_HDB_results_summary.json  vowl_usage_patterns_demo.ipynb
docs/overrides/: main.html
examples/: README.md  basic_usage.py  vowl_demo_HDB_results_check_results.csv  vowl_demo_HDB_results_hdb_resale_prices.csv  vowl_demo_HDB_results_summary.json  vowl_demo_multi_table_results_check_results.csv  vowl_demo_multi_table_results_demo_employee_list.csv  vowl_demo_multi_table_results_demo_employee_list_demo_employee_payroll.csv  vowl_demo_multi_table_results_demo_employee_payroll.csv  vowl_demo_multi_table_results_summary.json  vowl_usage_patterns_demo.ipynb
examples/demo_outputs/: vowl_demo_HDB_results_hdb_resale_prices.csv  vowl_demo_multi_table_results_PSD_demo_employee_list.csv  vowl_demo_multi_table_results_PSD_demo_employee_list_PSD_demo_employee_payroll.csv  vowl_demo_multi_table_results_PSD_demo_employee_payroll.csv  vowl_demo_multi_table_results_check_results.csv  vowl_demo_multi_table_results_summary.json
site/: 404.html  index.html  search.json  sitemap.xml
site/architecture/: index.html
site/contracts/: index.html
site/getting-started/: index.html
site/known-issues/: index.html
site/roadmap/: index.html
site/usage-patterns/: index.html
src/dataquality/: __init__.py  cli.py  contract_parser.py  sql_validator.py  validate.py
src/vowl/: __init__.py  config.py  mapper.py  validate.py
src/vowl/adapters/: __init__.py  (+4 more)
test/: demo.py  pandas_demo.py  spark_demo.py  test_adapter_and_mapper_unit_coverage.py  test_models.py  test_sql_executors_unit_coverage.py  test_sql_security.py  test_usage_patterns.py  test_validate_unit_coverage.py
test/expected_outputs/: test_test_database_backends.py__TestMySQLConnection__test_mysql_with_filter_conditions__1__check_results.csv  test_test_database_backends.py__TestMySQLConnection__test_mysql_with_filter_conditions__1__output__hdb_resale_prices__lease_commence_date_required_check.csv  test_test_database_backends.py__TestMySQLConnection__test_mysql_with_ibis_adapter__1__check_results.csv  test_test_usage_patterns.py__TestIbisConnections__test_ibis_duckdb_connection__1__output__hdb_resale_prices__month_logical_type_options_maxLength_check.csv  test_test_usage_patterns.py__TestLocalDataFramePandas__test_pandas_validation_summary__1__output__hdb_resale_prices__lease_commence_date_logical_type_check.csv  test_test_usage_patterns.py__TestLocalDataFramePolars__test_polars_direct_ibis_validation__1__check_results.csv  test_test_usage_patterns.py__TestLocalDataFramePolars__test_polars_validation__1__output__hdb_resale_prices__hdb_resale_prices_duplicateValues.csv  test_test_usage_patterns.py__TestMultiAdapters__test_single_adapter_expands_to_all_schemas__1__consolidated__PSD_demo_employee_payroll.csv  (+8 more)
tests/: conftest.py  test_adapter_and_mapper_unit_coverage.py  test_aggregation_support.py  test_check_reference_unit_coverage.py  test_contract_unit_coverage.py  test_coverage_plan_workstream1.py  test_database_backends.py  test_executor_base_unit_coverage.py  test_export_table_as_arrow.py  test_models.py  test_readme_examples.py  test_sql_executors_unit_coverage.py  test_sql_security.py  test_usage_patterns.py  test_validate_unit_coverage.py
(+107 files in other folders)
