[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataquality"
version = "1.0.0"
description = "A SQL-powered data quality validation library for pandas and spark DataFrames."


[project.optional-dependencies]
pandas = [
    "pandas",
    "duckdb",
    "PyYAML"
    
]
spark = [
    "pyspark",
    "PyYAML"
]
# To install everything for local development
all = [
    "dataquality[pandas]",
    "dataquality[spark]"
]


[project.scripts]
dataquality = "dataquality.cli:main"

[tool.setuptools.packages.find]
where = ["src"]