[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataquality"
version = "1.0.0"
description = "A SQL-powered data quality validation library for pandas and spark DataFrames."


# Core dependencies (always installed)
dependencies = [
    "PyYAML>=5.4.0",
]

[project.optional-dependencies]
# Pandas
pandas = [
    "pandas>=1.3.0",
    "duckdb>=0.8.0",
]

# Spark  
spark = [
    "pyspark>=3.0.0",
]

# Everything (pandas + spark)
all = [
    "pandas>=1.3.0",
    "duckdb>=0.8.0",
    "pyspark>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]